# zapret-discord

./: CMakeLists.txt  README.md  app.manifest
src/: AutoUpdater.cpp  AutoUpdater.h  HttpTester.cpp  HttpTester.h  SelfInstaller.cpp  SelfInstaller.h  ShortcutUtils.cpp  ShortcutUtils.h  Theme.h  Utils.h  ZapretManager.cpp  ZapretManager.h  main.cpp  resources.rc  ui.slint
